# Obsidian-Study-Agent

./: .gitignore  Makefile  README.md  main.py  pyproject.toml
configs/: config.yaml
obsidian_db/: index.faiss  index.pkl
outputs/2025-05-13/20-51-48/.hydra/: hydra.yaml
outputs/2025-05-13/20-52-27/.hydra/: hydra.yaml
outputs/2025-05-15/11-18-58/.hydra/: hydra.yaml
outputs/2025-05-15/11-21-48/.hydra/: config.yaml  hydra.yaml
studying_assistant/building/: build_agent.py  obsidian_db.py
studying_assistant/deployment/: app.py
studying_assistant/deployment/frontend/static/css/: style.css
studying_assistant/deployment/frontend/templates/: index.html
studying_assistant/deployment/static/: script.js  style.css
studying_assistant/deployment/templates/: index.html
